Bug 22357: Custom scrollbars directive

--- a/client/app/components/dashboard/ualReport/ualReportForm/ualDataSource/ualDataSource.scss
+++ b/client/app/components/dashboard/ualReport/ualReportForm/ualDataSource/ualDataSource.scss
@@ -14,8 +14,7 @@
         .content-list {
             height: calc(100% - 120px);
             padding: 10px 0;
-            overflow-y: scroll;
-            > .data-source-list {
+            .data-source-list {
                 @include column-content(4);
             }
         }
@@ -32,7 +31,10 @@
 .ual-data-source {
     .container {
         .content-list {
-            > .data-source-list {
+            .mCS_no_scrollbar_y {
+              height: 100%;
+            }
+            .data-source-list {
                 &.-horizontal-fill {
                     height: 100%;
                     @include column-fill(auto);
